# amf-track-scratch

./: README.md
.github/workflows/: data-ingester.yml  export-ingester.yml
amf-track-infra/: compose.yml
aretha-volumes/: Dockerfile  compose.yml  main.py
data-ingester/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
data-ingester/data_ingester/: client.py  http.py  s3.py  worker.py
data-ingester/example/: download.py
data-ingester/scripts/: run.sh
export-ingester/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
export-ingester/export_ingester/: archive_export.py  config.py  ingest.py  main.py  models.py  sftp.py  ssh.py  test_utils.py  utils.py  worker.py
export-ingester/export_ingester/api_client/: __init__.py  client.py  models.py
export-ingester/export_ingester/test_utils/: api.py  models.py  utils.py
export-ingester/scripts/: init-localstack.sh
