[tool.poetry]
name = "data-ingester"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
arq = "^0.26.0"
asyncssh = "^2.15.0"
httpx = "^0.27.0"
s3fs = "^2024.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
