[tool.poetry]
name = "export-ingester"
version = "0.1.0"
description = ""
authors = ["Isaac Williams <isaac.andrew.williams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
s3fs = "^2024.9.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
exclude = [
    "tests/e2e/*"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
